--- a/layout/index.html
+++ b/layout/index.html
@@ -1,33 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<title>CSS Template</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<script>
-			function allowDrop(ev) {
-				ev.preventDefault();
-			}
 
-			function drag(ev) {
-				ev.dataTransfer.setData("text", ev.target.id);
-			}
+<head>
+    <title>CSS Template</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script>
+        function allowDrop(ev) {
+            ev.preventDefault();
+        }
 
-			function drop(ev) {
-				ev.preventDefault();
-				var data = ev.dataTransfer.getData("text");
-				ev.target.appendChild(document.getElementById(data));
-			}
-		</script>
-		<style>
-			#div1 {
-				width: 350px;
-				height: 70px;
-				padding: 10px;
-				border: 1px solid #aaaaaa;
-			}
-		</style>
-		<!-- <style>
+        function drag(ev) {
+            ev.dataTransfer.setData("text", ev.target.id);
+        }
+
+        function drop(ev) {
+            ev.preventDefault();
+            var data = ev.dataTransfer.getData("text");
+            ev.target.appendChild(document.getElementById(data));
+        }
+    </script>
+    <style>
+        #div1 {
+            width: 350px;
+            height: 70px;
+            padding: 10px;
+            border: 1px solid #aaaaaa;
+        }
+    </style>
+    <!-- <style>
 * {
   box-sizing: border-box;
 }
@@ -91,51 +92,50 @@ footer {
   }
 }
 </style> -->
-	</head>
-	<body>
-		<h2>CSS Layout Float</h2>
-		<p>
-			In this example, we have created a header, two columns/boxes and a footer. On smaller screens, the columns will stack on top of
-			each other.
-		</p>
-		<p>
-			Resize the browser window to see the responsive effect (you will learn more about this in our next chapter - HTML Responsive.)
-		</p>
+</head>
 
-		<header>
-			<h2>Cities</h2>
-		</header>
+<body>
+    <h2>CSS Layout Float</h2>
+    <p>
+        In this example, we have created a header, two columns/boxes and a footer. On smaller screens, the columns will stack on top of each other.
+    </p>
+    <p>
+        Resize the browser window to see the responsive effect (you will learn more about this in our next chapter - HTML Responsive.)
+    </p>
 
-		<section>
-			<nav>
-				<ul>
-					<li><a href="#">London</a></li>
-					<li><a href="#">Paris</a></li>
-					<li><a href="#">Tokyo</a></li>
-				</ul>
-			</nav>
+    <header>
+        <h2>Cities</h2>
+    </header>
 
-			<article>
-				<h1>London</h1>
-				<p>
-					London is the capital city of England. It is the most populous city in the United Kingdom, with a metropolitan area of
-					over 13 million inhabitants.
-				</p>
-				<p>
-					Standing on the River Thames, London has been a major settlement for two millennia, its history going back to its
-					founding by the Romans, who named it Londinium.
-				</p>
-			</article>
-		</section>
+    <section>
+        <nav>
+            <ul>
+                <li><a href="#">London</a></li>
+                <li><a href="#">Paris</a></li>
+                <li><a href="#">Tokyo</a></li>
+            </ul>
+        </nav>
 
-		<p>Drag the W3Schools image into the rectangle:</p>
+        <article>
+            <h1>London</h1>
+            <p>
+                London is the capital city of England. It is the most populous city in the United Kingdom, with a metropolitan area of over 13 million inhabitants.
+            </p>
+            <p>
+                Standing on the River Thames, London has been a major settlement for two millennia, its history going back to its founding by the Romans, who named it Londinium.
+            </p>
+        </article>
+    </section>
 
-		<div id="div1" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-		<br />
-		<img id="drag1" src="https://picsum.photos/200" draggable="true" ondragstart="drag(event)" width="336" height="69" />
+    <p>Drag the W3Schools image into the rectangle:</p>
 
-		<footer>
-			<p>Footer</p>
-		</footer>
-	</body>
+    <div id="div1" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+    <br />
+    <img id="drag1" src="https://picsum.photos/200" draggable="true" ondragstart="drag(event)" width="336" height="69" />
+
+    <footer>
+        <p>Footer</p>
+    </footer>
+</body>
+
 </html>
